[package]
name = "stagehand"
version = "0.1.0"
authors = ["Catherine Hart"]
description = "CLI tool for configuring systems"
homepage = "https://github.com/codehearts/stagehand-rs"
repository = "https://github.com/codehearts/stagehand-rs"
documentation = "https://docs.rs/stagehand"
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
